rectified babelrc config

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -23,9 +23,7 @@
       </ul>
     </div>
   </nav>
-  <iot-card id="badminton-court-card"></iot-card>
-  <iot-card id="gym-card"></iot-card>
-  <iot-card id="car-parking-card"></iot-card>
+  <iot-card-manager></iot-card-manager>
   </div>
 </body>
 </html>
