--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,6 +7,8 @@
   <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css"  media="screen,projection"/>
   <!--Let browser know website is optimized for mobile-->
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+  <link rel="import" href="components.html">
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
