Web component integration

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
   <script src="js/webcomponents.js" ></script>
-  <link rel="import" href="components/iot-card.html" />
+  <link rel="import" href="components/all-components.html" />
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
@@ -19,9 +19,6 @@
       </ul>
     </div>
   </nav>
-  <iot-card></iot-card>
-  <iot-card></iot-card>
-  <iot-card></iot-card>
-  </div>
+  <iot-container></iot-container>
 </body>
 </html>
