Stable UI version-1

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,16 +13,10 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
           <a class="navbar-brand" href="#">Crowd Analyzer</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
+          <form action="mailto:mehtasankets@gmail.com" class="navbar-form navbar-right">
             <button type="submit" class="btn btn-success">Feedback</button>
           </form>
         </div>
@@ -36,16 +30,6 @@
         More details to come soon...</p>
       </div>
     </div>
-    <!--<div class="container">
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title">Panel title</h3>
-        </div>
-        <div class="panel-body">
-          Panel content
-        </div>
-      </div>-->
-      <iot-container></iot-container>
-    <!--</div>-->
+    <iot-container></iot-container>
   </body>
 </html>
