--- a/frontend/src/graph.html
+++ b/frontend/src/graph.html
@@ -3,7 +3,6 @@
   <head>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="import" href="components/all-components.html" />
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -26,13 +25,17 @@
         More details to come soon...</p>
       </div>
     </div>
-    <iot-container></iot-container>
-    
+    <div class="container">
+      <div class="col-md-6 daily-graph"></div>
+      <div class="col-md-6 weekly-graph"></div>
+    </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/webcomponents.js"></script>
+    <script src="js/graph.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
     <script src="js/crowd-analyzer.js"></script>
-    
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
   </body>
 </html>
