Add data for more dates, add details to portal home page

--- a/frontend/src/graph.html
+++ b/frontend/src/graph.html
@@ -21,8 +21,11 @@
       <div class="container">
         <h1>Crowd Analyzer</h1>
         <p></p>
-        <p>A crowd analyzer project involves use of IOT based solution to predict the density at a particular place.<br/>
-        More details to come soon...</p>
+        <p>The idea of the project originated from a real life problem. Usually it is difficult to predict when the rush is more in
+the badminton court or at the gym. This results in employees going to gym or badminton court at wrong times when
+there is more rush and end up waiting for their turn. Crowd Analyser addresses this problem by tracking people
+entering into and exiting from an arena and continuously publishing results here. As it provides (near) realtime
+results, it helps employees plan their activities in a better way.</p>
       </div>
     </div>
     <div class="container">
