correcting video size and image path

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -133,17 +133,16 @@
 				<section>
 					<section>
 						<h2>Analyse phase</h2>
-						<a href="http://shakti04.hyd.deshaw.com:9000/" target="_blank"><img width="70%" height="70%" data-src="img/analyse_phase/portal.png" alt="Down arrow"></a>
+						<img width="70%" height="70%" data-src="img/analyse_phase/portal.PNG" alt="Down arrow"/>
 					</section>
 					<section>
 						<h2>Analyse phase</h2>
 						<br/>
-						<a href="http://shakti04.hyd.deshaw.com:9000/graph.html?ref=phoenixBadmintonCounter" target="_blank"><img width="100%" height="100%" data-src="img/analyse_phase/history.png" alt="Down arrow"></a>
+						<img width="100%" height="100%" data-src="img/analyse_phase/history.png" alt="Down arrow"/>
 					</section>
 				</section>
 				<section>
-					<iframe width="800px" height="<45></45>0px" src="https://www.youtube.com/embed/zBP7sOWpXy0?autoplay=1">
-					</iframe>
+					<iframe width="800px" height="450px" src="https://www.youtube.com/embed/zBP7sOWpXy0?autoplay=1" />
 				</section>
 				<section>
 					<h2>Future scope</h2>
