Add video link in the presentation

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -142,7 +142,8 @@
 					</section>
 				</section>
 				<section>
-					<iframe width="800px" height="450px" src="https://www.youtube.com/embed/zBP7sOWpXy0?autoplay=1" />
+					<h1>Video Demo</h1><br/>
+					<h2><u><a href="https://www.youtube.com/embed/zBP7sOWpXy0?autoplay=1">Click here</a></u> for video demo</h2>
 				</section>
 				<section>
 					<h2>Future scope</h2>
